--- a/index.html
+++ b/index.html
@@ -1,59 +1,128 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Music Mates UK</title>
-    <style>
-        body {
-            background-color: black;
-            color: #FFD700;
-            font-family: Arial, sans-serif;
-        }
-        header, footer {
-            border: 2px solid yellow;
-            padding: 10px;
-            text-align: center;
-        }
-        nav {
-            margin: 20px 0;
-        }
-        nav a {
-            color: #FFD700;
-            margin: 0 15px;
-            text-decoration: none;
-        }
-        .video-showcase {
-            display: flex;
-            justify-content: center;
-            margin: 20px 0;
-        }
-        .video-showcase iframe {
-            border: 2px solid yellow;
-            width: 80%;
-            height: 400px;
-        }
-    </style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title> / MusicMates UK</title>
+  <meta name="description" content="Public timestamped registry of project and music ideas by Richard Murray, and his RJMedia business. Each idea is published here with a SHA-256 hash and a commit timestamp for provenance." />
+  <link rel="icon" href="favicon.ico" />
+
+  <style>
+    :root{
+      --bg1:#8B5CF6; --bg2:#EC4899; --bg3:#3B82F6;
+      --card-bg: rgba(31,41,55,0.85);
+      --accent: #8B5CF6;
+      --glass: rgba(255,255,255,0.03);
+      --max-width: 1100px;
+    }
+    html,body{height:100%;margin:0;font-family: 'Poppins', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;}
+    body{
+      background: linear-gradient(180deg,var(--bg1),var(--bg2),var(--bg3));
+      color:#fff; -webkit-font-smoothing:antialiased;
+      -moz-osx-font-smoothing:grayscale;
+      padding:24px;
+      display:flex; justify-content:center;
+    }
+    .wrap{max-width:var(--max-width);width:100%;}
+    header{display:flex;align-items:center;justify-content:space-between;padding:12px 0;}
+    .brand{font-weight:700;font-size:1.25rem;}
+    nav a{color:#fff;text-decoration:none;margin-left:16px;opacity:0.95}
+    .hero{
+      display:grid;grid-template-columns:1fr 420px;gap:24px;align-items:center;
+      background: linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));
+      padding:28px;border-radius:12px;box-shadow:0 8px 30px rgba(0,0,0,0.25);
+    }
+    .hero h1{margin:0;font-size:2rem}
+    .hero p.lead{margin:8px 0 18px;color:#f3f4f6;opacity:0.95}
+    .subscribe-btn{
+      display:inline-block;background:#ff0000;color:#fff;padding:10px 14px;border-radius:6px;text-decoration:none;font-weight:600;
+      box-shadow:0 6px 18px rgba(0,0,0,0.25);
+    }
+    .remaster-card{background:var(--card-bg);padding:12px;border-radius:10px;text-align:center;}
+    .remaster-card iframe{width:100%;height:240px;border-radius:6px;border:0}
+    .content-section{margin-top:20px;display:grid;grid-template-columns:1fr 360px;gap:20px;}
+    .ideas{display:flex;flex-direction:column;gap:14px;}
+    .idea-card{background:var(--card-bg);padding:16px;border-radius:10px;box-shadow:0 8px 20px rgba(0,0,0,0.25)}
+    .idea-card h3{margin:0 0 6px}
+    .meta{font-size:0.85rem;color:#d1d5db;margin-bottom:8px}
+    .hash{font-family:monospace;font-size:0.78rem;color:#9ca3af;background:rgba(0,0,0,0.08);padding:6px;border-radius:6px;display:inline-block}
+    aside{background:rgba(255,255,255,0.03);padding:16px;border-radius:10px}
+    .coming h4{margin-top:0}
+    footer{margin-top:22px;text-align:center;color:rgba(255,255,255,0.8);font-size:0.9rem}
+    @media (max-width:980px){ .hero{grid-template-columns:1fr} .content-section{grid-template-columns:1fr} .remaster-card iframe{height:200px} }
+  </style>
 </head>
 <body>
+  <div class="wrap">
     <header>
-        <h1>Welcome to Music Mates UK</h1>
-        <nav>
-            <a href="#home">Home</a>
-            <a href="#about">About</a>
-            <a href="#services">Services</a>
-            <a href="#contact">Contact</a>
-        </nav>
+      <div class="brand">Wilfy1979 — Ideas & Releases</div>
+      <nav>
+        <a href="#ideas">Ideas</a>
+        <a href="#remaster">Remaster</a>
+        <a href="#coming">MusicMates</a>
+      </nav>
     </header>
 
-    <main>
-        <section class="video-showcase">
-            <iframe src="https://www.youtube.com/embed/example" frameborder="0" allowfullscreen></iframe>
+    <section class="hero" id="top">
+      <div>
+        <h1>Public Registry of My Work Ideas</h1>
+        <p class="lead">This page publishes full idea texts and their SHA‑256 hashes so commit timestamps + hashes can be used later to prove prior authorship. Sensitive details should be added only if you want them public.</p>
+        <div>
+          <a class="subscribe-btn" href="https://www.youtube.com/@RJM-Music1979?sub_confirmation=1" target="_blank" rel="noopener noreferrer">Subscribe on YouTube</a>
+        </div>
+      </div>
+
+      <div class="remaster-card" id="remaster">
+        <strong>Featured remaster</strong>
+        <!-- Embedded YouTube video provided by user -->
+        <iframe src="https://www.youtube.com/embed/qY33Mg6G60g" title="Featured remaster by Wilfy1979" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div style="margin-top:10px;color:#d1d5db;font-size:0.95rem">Best remaster — watch, subscribe, and share.</div>
+      </div>
+    </section>
+
+    <section class="content-section" id="ideas">
+      <main>
+        <h2>Ideas (public)</h2>
+        <div class="ideas">
+          <!-- Example idea entries — replace with your real idea texts. Full text is published below; a SHA-256 hash is shown for proof. -->
+          <article class="idea-card">
+            <div class="meta">2025-10-22 • tags: music, app</div>
+            <h3>MusicMates — Social for gig-going music fans</h3>
+            <p>Full published text (public): Build a location-aware social discovery app that connects people through shared bands, coordinates meetups at gigs, and provides a gig guide with integrated ticket links. Match users by band-list overlap, enable ephemeral meetups at events, and offer a verified artist-curated space for local scenes.</p>
+            <div style="margin-top:12px">
+              <div class="hash">sha256: REPLACE_WITH_COMPUTED_HASH_FOR_THIS_IDEA</div>
+            </div>
+          </article>
+
+          <article class="idea-card">
+            <div class="meta">2025-10-22 • tags: audio, remaster</div>
+            <h3>RJM Remaster Series</h3>
+            <p>Full published text (public): Release a sequence of remasters and audio improvements for classic tracks with versioned notes and downloadable stems. Each release pairs a remaster video on YouTube and a short making-of note on this page.</p>
+            <div style="margin-top:12px">
+              <div class="hash">sha256: REPLACE_WITH_COMPUTED_HASH_FOR_THIS_IDEA</div>
+            </div>
+          </article>
+
+          <!-- Add more idea-card blocks for each idea you want to publish -->
+        </div>
+      </main>
+
+      <aside>
+        <section class="coming" id="coming">
+          <h4>MusicMates — Coming soon</h4>
+          <p>MusicMates will be a UK-focused network to match fans by bands, coordinate meetups at gigs, and build micro-communities around local music scenes. Features planned: band-based matching, gig calendar aggregation, event-based ephemeral chat, and artist-curated listings. The goal is to make it easy for people who love the same bands to meet, collaborate, and attend gigs together safely.</p>
         </section>
-    </main>
+
+        <section style="margin-top:16px">
+          <h4>Proof workflow</h4>
+          <p style="font-size:0.95rem">Instead of reading about peoples mental health or who's been recently arrested, MusicMates promises to be positive, match with another music lover and check the latest built in gig guide and your both on your way.</p>
+        </section>
+      </aside>
+    </section>
 
     <footer>
-        <p>&copy; 2023 Music Mates UK. All rights reserved.</p>
+      <div>&copy; 2025 RJMedia — All rights reserved. Repo: musicmates-uk</div>
     </footer>
+  </div>
 </body>
 </html>
